# mvg_stoerung_mcp

./: .gitignore  DXT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE.md  conftest.py  dxt.py  example_client.py  generate_dxt.py  mcp-servers.json  mcp_config.json  mcp_config_template.json  mvg_mcp_server.py  mvg_stoerung_mcp.dxt  pyproject.toml  requirements.txt  start_server.sh  test_server.py
.github/workflows/: docker-image.yml  dxt.yml
