[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvg-stoerung-mcp"
version = "1.0.0"
description = "MCP Server for MVG Störung (Munich Public Transport Disruptions)"
authors = [
    {name = "MVG MCP Server", email = "dev@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mvg-mcp-server = "mvg_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mvg_mcp_server*"]